ほぼ変化なし

--- a/assets/speech/index.html
+++ b/assets/speech/index.html
@@ -92,7 +92,7 @@
                 第二段階から第三段階はそれぞれの個人が自分で役割を見つけるものだと思います。
                 皆さんにとってPOSSEでの活動が最優先事項かはわかりませんが、POSSE内での自分の役割を考えてみてはいかがでしょうか？その最初のステップとしてカリキュラムに遅れないというのがあります。POSSEには第一段階から第二段階に引き上げてくれる頼れる同期や先輩がたくさんいます。頼りまくってください。</p>
                 <div>
-                  <button class="speech-more"></button>
+                  <button class="more"></button>
                 </div>
             </div>
           </div>
@@ -110,7 +110,7 @@
                 人の性格は生まれつきある気質、それから狭義の性格、習慣的性格、役割性格の4層から構造されます。狭義の性格は人格ともいわれ幼少期までには形成されます。「習慣的性格」とは、日常の様々な人々の交流や経験を通じて、徐々に形成されてゆく性格です。ここで注目してほしいのは役割性格です。役割性格とは社会での様々な場面・状況に適応するために形成された性格で、状況に応じて瞬間的に変えることができる性格です。私の準硬式野球においての役割性格はより良く強い組織を作ることを考えています。またその面でチームから必要とされていると思っています。
                 このお題に沿っていうなら仲間の居場所を作るという自分の役割性格を作ることで自分の存在価値をしめすことができ自分の居場所ができるのではないかと思いました。</p>
                 <div>
-                  <button class="speech-more"></button>
+                  <button class="more"></button>
                 </div>
             </div>
           </div>
@@ -141,7 +141,7 @@
                 したがって、仲間の居場所というのはすでにPOOSEにはたくさん作られていると思います。
                 これからは人とつながる機会をより一層大事にし、安心して居られる居場所作りをハッカソンなどを通して作り上げていきたいです。</p>
                 <div>
-                  <button class="speech-more"></button>
+                  <button class="more"></button>
                 </div>
             </div>
           </div>
@@ -169,7 +169,7 @@
                   P：教えるとは、相手に「できる」ようにすること、わかってもらうだけじゃだめ
                   　　教える時は、「わかった？」じゃなくて、「じゃあやってみよう」でできるかどうかまでみてあげよう</p>
                   <div>
-                    <button class="speech-more"></button>
+                    <button class="more"></button>
                   </div>
             </div>
           </div>
@@ -197,7 +197,7 @@
                 ここで最初の教えること＝教わることにもどります。今あげたように教えようとした時、必要な能力、タスク、理解しておくべき点が明確になります。これって、自分に何が必要かを“教わってる“っていえません？、そしてもし教えることができたら、自分がどこまで理解しているかを“教わること“になるよね。もし教えられなかった場合でも、どこを理解してないかを（教わる側、生徒？）に“教わっている“っていえるよね。
                 なにが言いたいかって言うと、何かを教えるって言うのは教わることが必ず関わっている。（表裏一体、ついて回る）posseで当てはめると、今自分達3.0期ってわからないことだらけだけど、こんな簡単なこと先輩に聞けない、こんなこと聞くのは逆に先輩に失礼、先輩の時間を奪っちゃうから聞きにくい、とか思って先輩に聞け辛いけど、その僕たちが教わることも先輩たちに“教える“ことに繋がってることだから、怖がらずに積極的に先輩にきこー！！！</p>
                 <div>
-                  <button class="speech-more"></button>
+                  <button class="more"></button>
                 </div>
             </div>
           </div>
@@ -233,7 +233,7 @@
                   それが「教える」側と「教わる」側とでキャッチボールができている理由でもあるのでしょう。
                   今は「教わる」側の立場が多い私ですが、3.5期生が入ってきたら「教える」側でプログラミング・人格の両方を深めていきたいと思います。</p>
                   <div>
-                    <button class="speech-more"></button>
+                    <button class="more"></button>
                   </div>
             </div>
           </div>
@@ -269,7 +269,7 @@
                 ＝本音の対話なくして最高のチームなし！v
                   </p>
                   <div>
-                    <button class="speech-more"></button>
+                    <button class="more"></button>
                   </div>
             </div>
           </div>
@@ -303,7 +303,7 @@
                   心理学用語で返報性の原理
                   横もくが変わって新チームが構築されつつある今、抱えている疑問があったらまず横もくの人に聞いてみよう！一人で抱えるよりも曝け出す方が案外ことがうまく運ぶかも</p>
                   <div>
-                    <button class="speech-more"></button>
+                    <button class="more"></button>
                   </div>
 
             </div>
@@ -318,6 +318,8 @@
             <div  class="speech-content">
               <h3>井上岳</h3>
               <p class="speech-contents-show">
+                <script src="./assets/scripts/jquery-3.6.1.min.js" defer></script>
+                <div id="wrap">
                 本音の対話なくして最高のチームなし
                 チームとしての活動が終わっても
                 </p><p class="speech-contents-hide">メンバーでの交流があったり、思い出話をするようなチームが最高のチームだと思う。最高のチームとは？
@@ -335,7 +337,7 @@
                   日菜さんの、本音の対話にはコミュ量を確保することが大事という考えがとてもしっくりきた。ありがとうございます。
                 </p>
                 <div>
-                  <button class="speech-more"></button>
+                  <button class="more"></button>
                 </div>
             </div>
           </div>
