--- a/assets/event/index.html
+++ b/assets/event/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/style.css">
+  <script src="./assets/scripts/jquery-3.6.1.min.js" defer></script>
   <script src="../../assets/scripts/birthday.js" defer></script>
   <script src="../../assets/scripts/event.js" defer></script>
   <script src="../../assets/scripts/speech.js" defer></script>
@@ -68,9 +69,8 @@
       <!-- Article -->
       <div class="timeline-article">
         <div class="content-left-container">
-          <div class="content-left">
-            <p><span class="article-number">BBQ</span></p>
-            <img class="img-bbq" src="../img/LINE_ALBUM_220904.jpg" alt="">
+          <div class="content-left" id="content-img">
+            <p><span class="article-number"></span></p><img class="img-bbq" src="../img/LINE_ALBUM_220904.jpg" alt="">
           </div>
           <span class="timeline-author">いいねボタン</span>
         </div>
@@ -80,7 +80,7 @@
         </div>
         <div class="content-right-container">
           <div class="content-right">
-            <p><span class="article-number">かだチョキ</span></p>
+            <p><span class="article-number">BBQ</span></p>
             <div class="balloon1-left">
               <p>最高のイベントだったっっっっっっっっっっっk</p>
             </div>
@@ -91,17 +91,30 @@
           <span class="timeline-author"></span>
         </div>
         <div class="meta-date">
-          <span class="date">24</span>
-          <span class="month">AUG</span>
+          <span class="date">25</span>
+          <span class="month">JUN</span>
         </div>
       </div>
       <!-- // Article -->
       
       <!-- Article -->
       <div class="timeline-article">
+        <div class="content-left-container">
+          <div class="content-left">
+            <p><span class="article-number">かだチョキ</span></p>
+            <div class="balloon1-right">
+              <p>めちゃくちゃ進んで最高の気分です。本当にありがとうございました</p>
+            </div>
+            <div class="balloon1-right">
+              <p>こんにちは。これは例です。</p>
+            </div>
+            <p><span class="article-number"></span></p>
+          </div>
+          <span class="timeline-author"></span>
+        </div>
         <div class="content-right-container">
-          <div class="content-right">
-            <p><span class="article-number">かだチョキ</span></p><img class="img-kadachoki" src="../img/LINE_ALBUM_220904_1.jpg" alt="">
+          <div class="content-right" id="content-img">
+            <p><span class="article-number"></span></p><img class="img-kadachoki" src="../img/LINE_ALBUM_220904_1.jpg" alt="">
           </div>
           <span class="timeline-author"></span>
         </div>
@@ -115,14 +128,20 @@
       <!-- Article -->
       <div class="timeline-article">
         <div class="content-left-container">
-          <div class="content-left">
-            <p><span class="article-number">夏のDX</span></p><img class="img-summerdx" src="../img/LINE_ALBUM_220904_2.jpg" alt="">
+          <div class="content-left" id="content-img">
+            <p><span class="article-number"></span></p><img class="img-summerdx" src="../img/LINE_ALBUM_220904_2.jpg" alt="">
           </div>
           <span class="timeline-author"></span>
         </div>
         <div class="content-right-container">
           <div class="content-right">
-            <p>　　　　　　最高のイベントだった<span class="article-number">皆の声</span></p>
+            <p><span class="article-number">夏のDX</span></p>
+            <div class="balloon1-left">
+              <p>最高のイベントだったっっっっっっっっっっっk</p>
+            </div>
+            <div class="balloon1-left">
+              <p>こんにちは。これは例です。</p>
+            </div>
           </div>
           <span class="timeline-author"></span>
         </div>
