もっと見る

--- a/assets/speech/index.html
+++ b/assets/speech/index.html
@@ -9,11 +9,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap" rel="stylesheet">
+  <script src="../scripts/jquery-3.6.1.min.js" defer></script>
   <script src="../../assets/scripts/birthday.js" defer></script>
   <script src="../../assets/scripts/event.js" defer></script>
   <script src="../../assets/scripts/speech.js" defer></script>
   <script src="../../assets/scripts/top.js" defer></script>
-
 <title>speech-page</title>
 </head>
 <body>
@@ -75,7 +75,8 @@
             </figure>
             <div class="speech-content">
               <h3>本庄裕大</h3>
-              <p class="speech-contents-show">まず最初に僕はを「仲間の居場所を作るサポートせずして自分の居場所なし」と</p><p class="speech-contents-hide">
+              <div class="speech-contents-show">まず最初に僕はを「仲間の居場所を作るサポートせずして自分の居場所なし」と</div>
+              <div class="speech-contents-hide">
                 定義し直しました。今回のスピーチでは居場所がある状態の定義をした上で仲間の居場所を作るサポートの定義について話したいと思います。
                 そもそも居場所があるとは何か？
                 特定のコミュニティにおいて居場所があるという状態はそのコミュニティに対して後ろめたさを感じないかつ自分の役割を見出すことができる状態だと僕は思います。
@@ -90,10 +91,9 @@
                 そして仲間の居場所を作るサポートの定義は
                 第一段階から第二段階に引き上げることである。
                 第二段階から第三段階はそれぞれの個人が自分で役割を見つけるものだと思います。
-                皆さんにとってPOSSEでの活動が最優先事項かはわかりませんが、POSSE内での自分の役割を考えてみてはいかがでしょうか？その最初のステップとしてカリキュラムに遅れないというのがあります。POSSEには第一段階から第二段階に引き上げてくれる頼れる同期や先輩がたくさんいます。頼りまくってください。</p>
-                <div>
-                  <button class="more"></button>
-                </div>
+                皆さんにとってPOSSEでの活動が最優先事項かはわかりませんが、POSSE内での自分の役割を考えてみてはいかがでしょうか？その最初のステップとしてカリキュラムに遅れないというのがあります。POSSEには第一段階から第二段階に引き上げてくれる頼れる同期や先輩がたくさんいます。頼りまくってください。
+              </div>
+              <button class="more"></button>
             </div>
           </div>
 
@@ -109,9 +109,7 @@
                 私は部活ではコーチをしています。コーチをやっている中で僕は選手がプレーしやすい環境をつくり日本一のチームなれるように考えながら活動に取り組んでいます。そして僕が自分で考えるに準硬式野球部において僕の役割はこれだと考えています。そのために面談をやったり定期的にミーティングを開いたりして頑張ってます。
                 人の性格は生まれつきある気質、それから狭義の性格、習慣的性格、役割性格の4層から構造されます。狭義の性格は人格ともいわれ幼少期までには形成されます。「習慣的性格」とは、日常の様々な人々の交流や経験を通じて、徐々に形成されてゆく性格です。ここで注目してほしいのは役割性格です。役割性格とは社会での様々な場面・状況に適応するために形成された性格で、状況に応じて瞬間的に変えることができる性格です。私の準硬式野球においての役割性格はより良く強い組織を作ることを考えています。またその面でチームから必要とされていると思っています。
                 このお題に沿っていうなら仲間の居場所を作るという自分の役割性格を作ることで自分の存在価値をしめすことができ自分の居場所ができるのではないかと思いました。</p>
-                <div>
-                  <button class="more"></button>
-                </div>
+              <button class="more"></button>
             </div>
           </div>
 
@@ -318,7 +316,6 @@
             <div  class="speech-content">
               <h3>井上岳</h3>
               <p class="speech-contents-show">
-                <script src="./assets/scripts/jquery-3.6.1.min.js" defer></script>
                 <div id="wrap">
                 本音の対話なくして最高のチームなし
                 チームとしての活動が終わっても
