--- a/assets/birthday/index.html
+++ b/assets/birthday/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/reset.css">
   <link rel="stylesheet" href="../css/style.css">
+  <script src="../scripts/jquery-3.6.1.min.js" defer></script>
   <script src="../../assets/scripts/birthday.js" defer></script>
   <script src="../../assets/scripts/event.js" defer></script>
   <script src="../../assets/scripts/speech.js" defer></script>
