speech右上のマーク

--- a/assets/speech/index.html
+++ b/assets/speech/index.html
@@ -73,6 +73,7 @@
             <figure>
               <img class="speech-icon" src="../img/yuta.honnjyo-speech.png" alt="">
             </figure>
+            <span class="ribbon15">★</span>
             <div class="speech-content">
               <h3>本庄裕大</h3>
               <div class="speech-contents">まず最初に僕はを「仲間の居場所を作るサポートせずして自分の居場所なし」と
@@ -101,6 +102,7 @@
             <figure>
               <img class="speech-icon" src="../img/hiroki.ogawa-speech.jpeg" alt="">
             </figure>
+            <span class="ribbon15">★</span>
             <div class="speech-content">
               <h3>小川ひろき</h3>
               <p class="speech-contents">
@@ -119,6 +121,7 @@
             <figure>
               <img class="speech-icon" src="../img/yuma.tukagaoshi-speech.png" alt="">
             </figure>
+            <span class="ribbon15">★</span>
             <div  class="speech-content">
               <h3>塚越雄真</h3>
               <p class="speech-contents">「
@@ -156,6 +159,7 @@
             <figure>
               <img class="speech-icon" src="../img/chiyoko.hayashi-speech.png" alt="">
             </figure>
+            <span class="ribbon15">★</span>
             <div  class="speech-content">
               <h3>林千翼子</h3>
               <p class="speech-contents">教えることは教わること
@@ -177,6 +181,7 @@
             <figure>
               <img class="speech-icon" src="../img/kazuki.iwashiro-speech.jpeg" alt="">
             </figure>
+            <span class="ribbon15">★</span>
             <div class="speech-content">
               <h3>岩城和輝</h3>
               <p class="speech-contents">教えることは教わること
@@ -208,6 +213,7 @@
             <figure>
               <img class="speech-icon" src="../img/michiko.noro-speech.jpeg" alt="">
             </figure>
+            <span class="ribbon15">★</span>
             <div  class="speech-content">
               <h3>野呂美智子</h3>
               <p class="speech-contents">
@@ -247,6 +253,7 @@
             <figure>
               <img class="speech-icon" src="../img/ayumi.fujii-speech.png" alt="">
             </figure>
+            <span class="ribbon15">★</span>
             <div  class="speech-content">
               <h3>藤井愛弓</h3>
                 <p class="speech-contents">「本音の対話なくして最高のチームなし」私自身、本音の対話がとっても苦手。気になることがあっても、反対して相手に嫌な思いをさせたくないな、嫌われたくないな、で話せないことが多い。
@@ -276,33 +283,38 @@
             <figure>
               <img class="speech-icon" src="../img/yudai.inose-speech.png" alt="">
             </figure>
+            <span class="ribbon15">★</span>
             <div class="speech-content">
               <h3>猪瀬雄大</h3>
               <p class="speech-contents">本音の対話なくして最高のチームなし
                 最高のチームを作る上で隠してしまいがちな本音ってなんだろう？Posseは周知の通り、みんなでプログラミングの技術向上と人格面の向上を図るコミュニティ→
-                  ならば隠しちゃいけない本音とは
-                  技術面：理解度や能力を隠さないこと、
-                  例：わかんないことをわかる！って言ってしまう
-                  精神面：チームメンバーへの要求や意見を言うこと
-                  例：もっと○○してほしい。
-                  なぜこうなってしまう
-                  →チームメンバー間で能力に差を感じて、引け目を感じるから？あんまり話したことがないと本音を言いづらい？　自分のプライドが邪魔をする？　雰囲気が崩れることへの恐怖？
-                  特に３.0期生 カリキュラムや新人ハッカソンで　基本みんな同じことやってる　今後のハッカソンなりでチームで一つのものを作ることが増えてくると
-                  自分の得意分野や苦手分野、その他個性や性格、能力が明らかになっていき、チーム内で自分が請け負う責任の幅が広がる
-                  本音で話せないことがあると大きな弊害、チーム崩壊に繋がる
-                  逆に
-                  できないことを曝け出せるチームは強い→それを考慮した上での行動ができる
-                  ただ上辺の関係で和気藹々とやるのとは違う
-                  本音の会話をするために
-                  自己開示をする
-                  自分から中身をさらけだす。
-                  自分の人となりや今の状態がわかるエピソードを隠さない
-                  その上で相手の話にも興味を持ってあげる。本音の会話を引き出す
-                  相手に何かしてくれたら自分も何かしなきゃと感じる
-                  心理学用語で返報性の原理
-                  横もくが変わって新チームが構築されつつある今、抱えている疑問があったらまず横もくの人に聞いてみよう！一人で抱えるよりも曝け出す方が案外ことがうまく運ぶかも
-                </p>
+                ならば隠しちゃいけない本音とは
+                技術面：理解度や能力を隠さないこと、
+                例：わかんないことをわかる！って言ってしまう
+                精神面：チームメンバーへの要求や意見を言うこと
+                例：もっと○○してほしい。
+                なぜこうなってしまう
+                →チームメンバー間で能力に差を感じて、引け目を感じるから？あんまり話したことがないと本音を言いづらい？　自分のプライドが邪魔をする？　雰囲気が崩れることへの恐怖？
+                特に３.0期生 カリキュラムや新人ハッカソンで　基本みんな同じことやってる　今後のハッカソンなりでチームで一つのものを作ることが増えてくると
+                自分の得意分野や苦手分野、その他個性や性格、能力が明らかになっていき、チーム内で自分が請け負う責任の幅が広がる
+                本音で話せないことがあると大きな弊害、チーム崩壊に繋がる
+                逆に
+                できないことを曝け出せるチームは強い→それを考慮した上での行動ができる
+                ただ上辺の関係で和気藹々とやるのとは違う
+                本音の会話をするために
+                自己開示をする
+                自分から中身をさらけだす。
+                自分の人となりや今の状態がわかるエピソードを隠さない
+                その上で相手の話にも興味を持ってあげる。本音の会話を引き出す
+                相手に何かしてくれたら自分も何かしなきゃと感じる
+                心理学用語で返報性の原理
+                横もくが変わって新チームが構築されつつある今、抱えている疑問があったらまず横もくの人に聞いてみよう！一人で抱えるよりも曝け出す方が案外ことがうまく運ぶかも
+              </p>
+              <!-- <div class="ribbon15-wrapper"> -->
+                  <!-- <div> -->
                     <p class="button">--もっと見る--</p>
+                  <!-- </div> -->
+                <!-- </div> -->
                     <!-- <button class="more"></button> -->
 
             </div>
@@ -313,6 +325,7 @@
           <div class="speech-items">
             <figure>
               <img class="speech-icon" src="../img/gaku.inoue-speech.png" alt="">
+              <span class="ribbon15">★</span>
             </figure>
             <div  class="speech-content">
               <h3>井上岳</h3>
