praised-section-created

--- a/index.html
+++ b/index.html
@@ -103,8 +103,31 @@
           <li class="link-items item1">
             <p class="items-title">100秒スピーチ<span class="span-arrow">⇒</span></p>
             <span class="section-label">Sect.1</span>
+          </li>
+        </a>
+        <a href="./assets/birthday/index.html">
+          <li class="link-items item2">
+            <p class="items-title">誕生日<span class="span-arrow">⇒</span></p>
+            <span class="section-label">Sect.2</span>
+          </li>
+        </a>
+        <a href="./assets/event/index.html">
+          <li class="link-items item3">
+            <p class="items-title">リアルイベント<span class="span-arrow">⇒</span></p>
+            <span class="section-label">Sect.3</span>
+          </li>
+        </a> 
+      </ul>
+    </section>
+
+    <section class="praise">
+      <div class="background-img">
+        <h1 class="praise-title">偉大なるカルチャー局</h1>
+        <div class="praise-wrapper">
+          <div class="praise-devided">
             <div class="item-box">
               <figure class="culture-img mrp-san">
+                <img src="./assets/img/hover-change1.png" alt="">
                 <img src="./assets/img/mrp-san.png" alt="">
               </figure>
               <div class="item-content">
@@ -114,27 +137,17 @@
                 <p class="item-entrance">2020年入学 1期生</p>
               </div>
             </div>
-          </li>
-        </a>
-        <a href="./assets/birthday/index.html">
-          <li class="link-items item2">
-            <p class="items-title">誕生日<span class="span-arrow">⇒</span></p>
-            <span class="section-label">Sect.2</span>
             <div class="item-box">
               <figure class="culture-img steaker">
+                <img src="./assets/img/hover-change2.png" alt="">
                 <img src="./assets/img/hack-steaker.png" alt="">
               </figure>
               <div class="item-content">
               </div>
             </div>
-          </li>
-        </a>
-        <a href="./assets/event/index.html">
-          <li class="link-items item3">
-            <p class="items-title">リアルイベント<span class="span-arrow">⇒</span></p>
-            <span class="section-label">Sect.3</span>
             <div class="item-box">
               <figure class="culture-img hina-san">
+                <img src="./assets/img/hover-change3.png" alt="">
                 <img src="./assets/img/hina-san.png" alt="">
               </figure>
               <div class="item-content">
@@ -144,9 +157,9 @@
                 <p class="item-entrance">2020年入学 1期生</p>
               </div>
             </div>
-          </li>
-        </a> 
-      </ul>
+          </div>
+        </div>
+      </div>
     </section>
 
   </main>
