--- a/assets/speech/index.html
+++ b/assets/speech/index.html
@@ -394,7 +394,7 @@
               <input class="speech-form border" type="text" name="input" autocomplete="name" placeholder="本文" required="required"/>
             </div>
           </div>
-          <div class="speech-submit">
+          <div class="speech-submit js-openModal" id="record-modalButton">
             <button class="js-openModal" id="record-modalButton">送信する</button>
           </div>
         </form>
