--- a/assets/event/index.html
+++ b/assets/event/index.html
@@ -190,7 +190,7 @@
       <div class="timeline-article">
         <div class="content-right-container">
           <div class="content-right">
-            <p>　　　　　　みんな参加しよう！参加はこちらから<span class="article-number" id="article-number-next">運動会</span></p>
+            <p>どんどんみんな参加しよう！参加はこちらから<span class="article-number" id="article-number-next">運動会</span></p>
           </div>
           <span class="timeline-author"></span>
         </div>
