--- a/assets/speech/index.html
+++ b/assets/speech/index.html
@@ -374,7 +374,7 @@
       </section>
       <section class="speech-forms">
         <h1 class="form-title">100秒スピーチ投稿フォーム</h1>
-        <form class="from">
+        <form class="from" onsubmit="return false;" onsubmit="return confirm('送信しますか？');">
           <div class="speech-form">
             <label class="label">名前<span class="required">*</span></label>
             <div class="input-box">
@@ -383,10 +383,10 @@
           </div>
 
           <div class="speech-form">
-           <label class="label">テーマ<span class="required">*</span></label>
-           <div class="input-box">
-            <input class="speech-form border" type="text" name="input" autocomplete="name" placeholder="テーマ" required="required"/>
-           </div>
+            <label class="label">テーマ<span class="required">*</span></label>
+            <div class="input-box">
+              <input class="speech-form border" type="text" name="input" autocomplete="name" placeholder="テーマ" required="required"/>
+            </div>
           </div>
           <div class="speech-form">
             <label class="label">本文<span class="required">*</span></label>
