--- a/assets/birthday/index.html
+++ b/assets/birthday/index.html
@@ -66,24 +66,42 @@
         </figure>
       </div>
       <div class="birthday-bothside">
-        <div class="birthday-liftside">
+       <div class="birthday-leftside">
           <ul class="birthday-set">
             <li class="birthday-item">
-              <h2 class="card-title">a</h2>
+              <h2 class="card-title">01</h2>
               <figure>
-                <img class="birthday-card" src="../img/birthday-top-img.png" alt="">
+                <!-- <img class="birthday-card" src="../img/birthday-top-img.png" alt=""> -->
               </figure>
             </li>
             <li class="birthday-item">
-              <h2 class="card-title">a</h2>
+              <h2 class="card-title">03</h2>
               <figure>
-                <img class="birthday-card" src="../img/birthday-top-img.png" alt="">
+                <!-- <img class="birthday-card" src="../img/birthday-top-img.png" alt=""> -->
               </figure>
             </li>
             <li class="birthday-item">
-              <h2 class="card-title">a</h2>
+              <h2 class="card-title">05</h2>
               <figure>
-                <img class="birthday-card" src="../img/birthday-top-img.png" alt="">
+                <!-- <img class="birthday-card" src="../img/birthday-top-img.png" alt=""> -->
+              </figure>
+            </li>
+            <li class="birthday-item">
+              <h2 class="card-title">07</h2>
+              <figure>
+                <!-- <img class="birthday-card" src="../img/birthday-top-img.png" alt=""> -->
+              </figure>
+            </li>
+            <li class="birthday-item">
+              <h2 class="card-title">09</h2>
+              <figure>
+                <!-- <img class="birthday-card" src="../img/birthday-top-img.png" alt=""> -->
+              </figure>
+            </li>
+            <li class="birthday-item">
+              <h2 class="card-title">11</h2>
+              <figure>
+                <!-- <img class="birthday-card" src="../img/birthday-top-img.png" alt=""> -->
               </figure>
             </li>
           </ul>
@@ -91,22 +109,44 @@
         <div class="birthday-rightside">
           <ul class="birthday-set">
             <li class="birthday-item">
-              <h2 class="card-title">a</h2>
+              <h2 class="card-title">02</h2>
               <figure>
-                <img class="birthday-card" src="../img/birthday-top-img.png" alt="">
+                <!-- <img class="birthday-card" src="../img/birthday-top-img.png" alt=""> -->
               </figure>
             </li>
             <li class="birthday-item">
-              <h2 class="card-title">a</h2>
+              <h2 class="card-title">04</h2>
               <figure>
-                <img class="birthday-card" src="../img/birthday-top-img.png" alt="">
+                <!-- <img class="birthday-card" src="../img/birthday-top-img.png" alt=""> -->
+              </figure>
+            </li>
+            <li class="birthday-item">
+              <h2 class="card-title">06</h2>
+              <figure>
+                <!-- <img class="birthday-card" src="../img/birthday-top-img.png" alt=""> -->
+              </figure>
+            </li>
+            <li class="birthday-item">
+              <h2 class="card-title">08</h2>
+              <figure>
+                <!-- <img class="birthday-card" src="../img/birthday-top-img.png" alt=""> -->
+              </figure>
+            </li>
+            <li class="birthday-item">
+              <h2 class="card-title">10</h2>
+              <figure>
+                <!-- <img class="birthday-card" src="../img/birthday-top-img.png" alt=""> -->
+              </figure>
+            </li>
+            <li class="birthday-item">
+              <h2 class="card-title">12</h2>
+              <figure>
+                <!-- <img class="birthday-card" src="../img/birthday-top-img.png" alt=""> -->
               </figure>
             </li>
           </ul>
         </div>
-        <div class="birthday-rightside"></div>
       </div>
-
 
     </article>
   </main>
