--- a/assets/speech/index.html
+++ b/assets/speech/index.html
@@ -97,12 +97,11 @@
             <span class="ribbon15">NEW</span>
             <div class="speech-content">
               <h3>本庄裕大</h3>
-              <div class="speech-contents">
+              <p class="speech-contents">
                 スピーチ内容記述
-              </div>
+              </p>
               <p class="button" id="ribbonSwitch
               ">--もっと見る--</p>
-              <!-- <button class="more"></button> -->
             </div>
           </div>
 
@@ -117,7 +116,6 @@
                 スピーチ内容記述
               </p>
               <p class="button">--もっと見る--</p>
-              <!-- <button class="more"></button> -->
             </div>
           </div>
 
@@ -131,8 +129,7 @@
               <p class="speech-contents">
                 スピーチ内容記述
               </p>
-                  <p class="button">--もっと見る--</p>
-                  <!-- <button class="more"></button> -->
+              <p class="button">--もっと見る--</p>
             </div>
           </div>
         </div>
@@ -151,8 +148,7 @@
               <p class="speech-contents">
                 スピーチ内容記述
               </p>
-                    <p class="button">--もっと見る--</p>
-                    <!-- <button class="more"></button> -->
+              <p class="button">--もっと見る--</p>
             </div>
           </div>
           <div class="speech-items">
@@ -166,7 +162,6 @@
                 スピーチ内容記述
               </p>
               <p class="button">--もっと見る--</p>
-                  <!-- <button class="more"></button> -->
             </div>
           </div>
 
@@ -181,7 +176,6 @@
                 スピーチ内容記述
               </p>
               <p class="button">--もっと見る--</p>
-                    <!-- <button class="more"></button> -->
             </div>
           </div>
         </div>
@@ -201,7 +195,6 @@
                   スピーチ内容記述
                 </p>
                 <p class="button">--もっと見る--</p>
-                    <!-- <button class="more"></button> -->
             </div>
           </div>
           <div class="speech-items">
@@ -218,8 +211,6 @@
 
             </div>
           </div>
-
- 
 
           <div class="speech-items">
             <figure>
